[tool.poetry]
name = "test-package"
packages = [
    { include = "my_test_repo" }
]
description = "A test python package."
authors = ["Joshua Butt <josh@joshb.in>"]
version = "0.1.0a"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.plugins."git-auto-version"]

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true

[tool.pyright]
ignore = ["./docs/**", "./examples/**"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
